--- a/home/templates/login.html
+++ b/home/templates/login.html
@@ -21,16 +21,16 @@
               <h1 class="card-title mt-2">Car Rental</h1>
             </div>
             <form action="#" method="post">
+                {% csrf_token %}
               <div class="form-group">
-                <label for="email">Email:</label>
-                <input type="email" name="email" id="email" class="form-control" required>
+                <label for="username">username:</label>
+                <input type="text" name="username" id="username" class="form-control" required>
               </div>
 
               <div class="form-group">
                 <label for="password">Password:</label>
                 <input type="password" name="password" id="password" class="form-control" required>
               </div>
-
               <button type="submit" class="btn btn-primary btn-block mt-4">Login</button>
             </form>
 
