--- a/home/templates/nav.html
+++ b/home/templates/nav.html
@@ -15,6 +15,18 @@
                     <li class="nav-item">
                         <a class="nav-link" href="#">Client</a>
                     </li>
+                    {% if user.is_authenticated %}
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                            data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            {{user.username}}
+                        </a>
+                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                            <a class="dropdown-item" href="{% url 'accounts:logout' %}">Logout</a>
+                            <a class="dropdown-item" href="#">My Rentals</a>
+                        </div>
+                    </li>
+                    {% else %}
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
                             data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -25,6 +37,9 @@
                             <a class="dropdown-item" href="#">Register</a>
                         </div>
                     </li>
+                    {% endif %}
+
+
                 </ul>
                 <form class="form-inline my-2 my-lg-0">
                 </form>
